Changes made by Mesmera Fernandes (mesmeracomunicacao@gmail.com).

--- a/Contrato Eletronico Mesmera/index.html
+++ b/Contrato Eletronico Mesmera/index.html
@@ -389,8 +389,9 @@ function onGetDirectoryFail(error) {
         
         <div data-role="footer">
             <div data-role="tabstrip">
-                <a href="views/home.html" data-transition="slide:right"id="bypassme" data-icon="organize">Contratos assinados</a>   
-                <a href="views/eventogram.html" data-transition="slide:left" id="bypassme" data-icon="compose">Assinar contrato</a>
+                <a href="views/home.html" data-transition="slide:right" id="bypassme" data-icon="organize">Contratos assinados</a>
+                <a href="views/assinarcontratos.html" data-transition="slide:left"id="bypassme" data-icon="compose">Assinar contrato</a>   
+                
             </div>
         </div>
     </div>
